--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </nav>
     </header>
     <main class="container">
-      <div class= "background-image"><img src="img/background-photo.jpg" width="1200" height="514" alt="Sedona">
-      </div>
+     <section class= "background-image"> 
+      </section>
       <div class="center-text">
-        <h1>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
+        <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <h2 class="visually-hidden">Причины поехать в Седону</h2>
         <p class="reasons-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </div>
@@ -34,34 +34,34 @@
         <ul class="reasons-list">
          <li class="reason-item-blue">
           <div class="reason-item-blue-text">
-            <h3>Настоящий<br> городок</h3>
+            <h3>Настоящий городок</h3>
             <span>- №1 -</span>
-            <p>Седона - не аттракцион для туристов,<br> там течет своя жизнь</p>
+            <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="reason-item-blue-img">
             <img src="img/layer-10.jpg" width="800" height="260" alt="Настоящий городок">
           </div>
         </li>
-        <li class="reason-item-white">
-          <div class="reason-item-white-img">
-            <img src="img/icon-1.svg" alt="Жилье">
-          </div>
+        <li class="reason-item-white house">
+        <!--   <div class="reason-item-white-img">
+            <img src="img/icon-1.svg" alt="Жилье"> - не контентное изображение, а фоном. фон для псевдоэлемента li. -->
+         <!--  </div> --> 
           <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="reason-item-white">
-           <div class="reason-item-white-img" alt="Еда">
+        <li class="reason-item-white food">
+           <!-- <div class="reason-item-white-img" alt="Еда">
             <img src="img/icon-3.svg">
-          </div>
+          </div> -->
           <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="reason-item-white">
-           <div class="reason-item-white-img" alt="Сувениры">
+        <li class="reason-item-white souvenirs">
+          <!--  <div class="reason-item-white-img" alt="Сувениры">
             <img src="img/icon-2.svg">
-          </div>
+          </div> -->
           <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного<br> производства!</p>
+          <p>Не только китайского, но и местного производства!</p>
         </li>
         <li class="reason-item-blue second">
           <div class="reason-item-blue-text">
@@ -74,41 +74,64 @@
          </div>
        </li>
        <li class="reason-item-grey">
-        <h3>Небольшая<br> площадь</h3>
+        <h3>Небольшая площадь</h3>
         <span>- №3 -</span>
-        <p>Все достопримечательности<br> находятся очень близко</p>
+        <p>Все достопримечательности находятся очень близко</p>
       </li>
       <li class="reason-item-grey">
-        <h3>Красивая<br> дорога</h3>
+        <h3>Красивая дорога</h3>
         <span>- №4 - </span>
-        <p>Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </li>
       <li class="reason-item-grey">
-        <h3>Мало<br> туристов</h3>
+        <h3>Мало туристов</h3>
         <span>- №5 - </span>
-        <p>Большинство едет в Гранд Каньон<br> и толпится там</p>
+        <p>Большинство едет в Гранд Каньон и толпится там</p>
       </li>   
     </ul>    
   </section>
   <section class="interest">
     <h2>Заинтересовались?</h2>
-    <p class="interest-text">Укажите предполагаемые даты поездки,<br>  и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-    <!-- <img src="img/map.jpg" width="1200" height="474" alt="Карта"> -->
-  </section>
+    <p class="interest-text">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в Седоне</p>
+      </section>
   <section class="form">
-    <button class="button-search" type="submit">Поиск гостиницы в Седоне</button>
+    <a class="button-search" href="#" type="submit">Поиск гостиницы в Седоне</a> 
+    
+
     <div class="form-fields">
       <form class="user" method="get"
       action="https://echo.htmlacademy.ru">
+      
       <p class="form-field">
         <label for="date-arrival">Дата заезда</label>
         <input class="date-arrival" id="date-arrival" type="text"
-        name="date-arrival">
+        name="date-arrival" value="24 апреля 2017">
+        <button class="calendar-button" type="button">
+          <svg x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22">
+            <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363
+            0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362
+            0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"></path><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594
+            15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"></path></svg>
+          </button>
       </p>
+
+
       <p class="form-field">
         <label for="date-depature">Дата выезда</label>
         <input class="date-depature" id="date-depature" type="text"
-        name="date-depature">
+        name="date-depature" value="4 июля 2017">
+        <button class="calendar-button" type="button">
+          <svg x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22""><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363
+          0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362
+          0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"></path><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594
+          15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"></path></svg></button>
+
+
+
+
+
+
+
       </p>
       <div class="form-field-ammount">
       <p class="form-field amount-adults">
@@ -117,25 +140,24 @@
         name="amount-adults">
       </p class="form-field">
       <p class="form-field amount-children">
-        <label for="amount-adults">Дети:</label>
+        <label for="amount-children">Дети:</label>
         <input class="amount-children" id="amount-children" type="number" min="0"
         name="amount-children">
       </p>      
     </div>
-      <button class="button" type="submit">Найти</button>
+      <button class="button-submit" type="submit">Найти</button>
     </form>  
   </div> 
+
+  <div class="map"> <!-- задать ему верхний отрицаткльный марджин и возможно z-index если карта наползет на форму, то задать карте меньший индекс. возможны сделать position relative для формы и для карыт, чтобы z index работал корректно -->
+    <!-- <img src="img/map.jpg" width="1200" height="474" alt="Карта"> -->
 </section>
 </main>
 <footer class="main-footer">
   <p class="footer-text">#VISITSEDONA</p>
   <div class="footer-social">
     <ul>
-      <li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span>
-
-
-
-      </a></li>
+      <li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
       <li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
       <li><a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a></li>
     </ul>
